# java2C

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/Java2C/core/: code_gen.py  lexer.py  parser.py  tokens.py
src/Java2C/core/grammar/: declarations.py  expressions.py  statements.py
tests/invalid/: BadIfCondition.java  BrokenMethod.java  MissingSemicolon.java  TwoClasses.java  UnclosedBrace.java  UsesExtends.java
tests/valid/: Battery.java  Counter.java  Grade.java  MathUtils.java  player.java  point.java
