[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "java2c"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name="Myson Dio"}
]
dependencies = [
    "rich>=14.0",
    "ply>=3.11"
]

[project.urls]
Homepage = "https://github.com/gtRZync/java2C"